handle not found errors globally with ResourceNotFound exception